--- a/src/App.css
+++ b/src/App.css
@@ -8,5 +8,47 @@
   height: 100vh;
   justify-content: center;
   align-items: center;
-  background-color: #f4f4f4;
+  background-color: #f5f5f5;
+}
+
+.calculator {
+  background-color: #2d2d2d;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
+}
+
+.display {
+  background-color: #1a1a1a;
+  height: 15vh;
+  color: #fff;
+  font-size: 3em;
+  padding: 10px;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+.buttons{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+}
+
+.btn {
+  padding: 20px;
+  font-size: 1em;
+  border: none;
+  border-radius: 5px;
+  background-color: #3d3d3d;
+  color: #fff;
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
+
+.btn:hover {
+  background-color: #4d4d4d;
 }
