--- a/src/App.css
+++ b/src/App.css
@@ -16,13 +16,14 @@
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
+  width: 320px;
 }
 
 .display {
   background-color: #1a1a1a;
   height: 15vh;
   color: #fff;
-  font-size: 3em;
+  font-size: 2.5em;
   padding: 10px;
   margin-bottom: 20px;
   border-radius: 5px;
@@ -52,3 +53,6 @@
 .btn:hover {
   background-color: #4d4d4d;
 }
+
+.btnEqual {
+  background-color: #ff9500;  grid-column: span 2;}
